<resources>
    <string name="app_name">Baca Quran</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="pesan">Anda belum punya surat yang ditandai favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="doa_wirid">Doa Wirid</string>
    <string name="asmaul_huzna">Asmaul Huzna</string>
    <string name="doa_tahlil">Doa tahlil</string>
    <string name="tasbih">Tasbih</string>
    <string name="quran_mp3">Quran Mp3</string>
    <string name="jadwal_sholat">Jadwal Sholat</string>
    <string name="pengajian">Pengajian</string>
    <string name="doa_harian">Doa Harian</string>
    <string name="baca_quran">Baca Quran</string>
    <string name="al_fatihah">Al Fatihah</string>
    <string name="_1">1</string>
    <string name="arab">للَّهِ الرَّحْمَٰنِ الرَّحِيمِ ابِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ</string>
    <string name="arti">Dengan menyebut nama Allah Yang Maha Pemurah lagi Maha Penyayang.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="setelan">Setelan</string>
    <string name="donasi">Donasi</string>
    <string name="blog">Blog</string>
    <string name="tentang">Tentang</string>
    <string name="github">Github</string>
    <string name="pesan_sukses">Pesan Sukses</string>
    <string name="surat_berhasil_di_hapus_dari_daftar_favorite">Surat berhasil di hapus dari daftar favorite</string>
    <string name="surat_berhasil_ditambahkan_ke_daftar_favorite">Surat berhasil ditambahkan ke daftar favorite</string>
    <string name="pergi_ke_ayat">Pergi ke Ayat</string>
    <string name="masukan_nomor_ayat_1">Masukan nomor ayat 1-</string>
    <string name="_7">7</string>
    <string name="ok">OK</string>
    <string name="batal">BATAL</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="dapatkan_pahala_dengan_maksimal_dengan_selalu_membaca_alquran">Dapatkan pahala dengan maksimal dengan selalu membaca alquran</string>
    <string name="resource_aplikasi">Resource Aplikasi</string>
    <string name="https_github_com_mazipan_quran_offline">https://github.com/mazipan/quran-offline</string>
    <string name="https_github_com_bachors_al_quran_id_api">https://github.com/bachors/Al-Quran-ID-API</string>
    <string name="https_www_flaticon_com_free_icon_muslim_2759837">https://www.flaticon.com/free-icon/muslim_2759837</string>
    <string name="inspired_aplikasi_by">Inspired Aplikasi By</string>
    <string name="https_www_baca_quran_id">https://www.baca-quran.id/</string>
    <string name="aplikasi_dibuat_oleh">Aplikasi Dibuat oleh</string>
    <string name="bagas_makhali">Bagas Makhali</string>
    <string name="pencarian_cepat">Pencarian Cepat</string>
    <string name="lainya">Lainya</string>
    <string name="surat_rekomendasi">Surat Rekomendasi</string>
    <string name="surat_favorite">Surat Favorite</string>
    <string name="belum_terdapat_surat_favorite">Belum terdapat surat favorite</string>
    <string name="dibuat_oleh_bagas_makhali">Dibuat oleh Bagas Makhali</string>
    <string name="terakhir_dibaca">Terakhir Dibaca</string>
    <string name="ayat_terakhir_dibaca">Surat Terakhir Dibaca</string>
    <string name="klik_pada_icon_tersebut_untuk_menandai">Klik pada icon tersebut untuk menandai</string>
    <string name="arabb">الفاتحة</string>
    <string name="ayat_ke_1">Ayat Ke 1</string>
    <string name="surat_rekomdendasi">Surat Rekomdendasi</string>
    <string name="wirid">Wirid</string>
    <string name="ar_rahman">Ar Rahman</string>
    <string name="yang_memiliki_mutlak_sifat_pemurah">Yang Memiliki Mutlak sifat Pemurah</string>
    <string name="latin">Latin</string>
    <string name="bismillaha_hirrohman_nirrohin">Bismillaha hirrohman nirrohin</string>
    <string name="terjemahan">Terjemahan</string>
    <string name="dengan_menyebut_nama_allah_yang_maha_pemurah_lagi_maha_penyayang">Dengan menyebut nama Allah Yang Maha Pemurah lagi Maha Penyayang.</string>
    <string name="doaharian">اَللّٰهُمَّ بَارِكْ لَنَا فِيْمَا رَزَقْتَنَا وَقِنَا عَذَابَ النَّارِ</string>
    <string name="alloohumma_barik_lalloohumma_barik_lalloohumma_barik_lalloohumma_barik_lalloohumma_barik_lanaa_fiimaa_razatanaa_waqinaa_adzaa_bannar">Alloohumma barik lAlloohumma barik lAlloohumma barik lAlloohumma barik lAlloohumma barik lanaa fiimaa razatanaa waqinaa \'adzaa bannar</string>
    <string name="ya_allah_berkahilah_kami_dalam_rezeki_yang_telah_engkau_berikan_kepada_kami_dan_peliharalah_kami_dari_siksa_api_neraka">Ya Allah, berkahilah kami dalam rezeki yang telah Engkau berikan kepada kami dan peliharalah kami dari siksa api neraka</string>
    <string name="doa_sebelum_makan">Doa sebelum makan</string>
    <string name="_114">114</string>
    <string name="pembukaan">Pembukaan :</string>
    <string name="_7_ayat">7 Ayat</string>
    <string name="tahlil">اَللّٰهُمَّ بَارِكْ لَنَا فِيْمَا رَزَقْتَنَا وَقِنَا عَذَابَ النَّارِ</string>
    <string name="dibaca_tiga_kali_tiap_selesai_shalat_fardhu_khusus_setelah_maghrib_dan_shubuh_sepuluh_kali">dibaca tiga kali tiap selesai shalat fardhu, khusus setelah maghrib dan shubuh sepuluh kali</string>
    <string name="_7x">7X</string>
    <string name="muqaddimah_surah">Muqaddimah Surah</string>
    <string name="opening">opening</string>
    <string name="closing">Closing</string>
    <string name="amanat">Mendengarkan sambil membaca alquran dan selalu dapatkan pahala</string>
    <string name="titlepengajian">Ustad Hanan Attaki : menjadi manusia yang lebih baik dan sebaik-baiknya manusia adalah yang bermafaat bagi orang lain</string>
    <string name="rekomendasi">Rekomendasi</string>
</resources>
