<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AboutFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorCard"
        android:elevation="25dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:onClick="onClick"
                android:foreground="?attr/selectableItemBackground"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/tentang_aplikasi"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bt_settings"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:onClick="onClick"
                android:foreground="?attr/selectableItemBackground"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/ic_settings_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/dapatkan_pahala_dengan_maksimal_dengan_selalu_membaca_alquran"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/colorTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resource_aplikasi"
            android:textColor="@color/colorTitle"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/ra1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/https_github_com_mazipan_quran_offline"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/ra2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/https_github_com_bachors_al_quran_id_api"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/ra3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/https_www_flaticon_com_free_icon_muslim_2759837"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/ra4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="https://www.flaticon.com/search?word=tasbih#"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspired_aplikasi_by"
            android:textColor="@color/colorTitle"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/urlInspired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/https_www_baca_quran_id"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aplikasi_dibuat_oleh"
            android:textColor="@color/colorTitle"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagas_makhali"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

</FrameLayout>