<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_nomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_union"
            android:fontFamily="@font/montserrat"
            android:text="@string/_1"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp"
            android:textStyle="normal"
            tools:ignore="SmallSp" />


        <TextView
            android:id="@+id/tv_arab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/arab"
            android:text="@string/arab"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_terjemahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:layout_margin="10dp"
        android:text="@string/arti"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="italic" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_arrow"
                android:layout_gravity="center"
                android:id="@+id/btPrevious"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/previous"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">
            <Button
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_arrow"
                android:layout_gravity="center"
                android:rotation="180"
                android:id="@+id/btNext"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/next"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>