<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorCard"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/bt_back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:onClick="onClick"
                    android:foreground="?attr/selectableItemBackground"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/ic_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/al_fatihah"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_arab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/arab"
            android:text="@string/arabb"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:text="@string/al_fatihah"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_arti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/medium"
                android:text="@string/pembukaan"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_jumlhayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/_7_ayat"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/muqaddimah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/muqaddimah_surah"
            android:textColor="@color/colorTitle"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvOpening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/opening"
            android:fontFamily="@font/medium"
            android:textSize="13sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvClosing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/medium"
            android:textSize="13sp"
            android:text="@string/closing"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>