<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorCard"
    app:cardCornerRadius="6dp"
    app:cardElevation="0dp"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_nomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_union"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/bt_share"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_share_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_bookmark"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_bookmark_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/bt_share"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_arab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/arab"
            android:text="@string/arab"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_bookmark"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/view_expanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_arab">
            <TextView
                android:id="@+id/latin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/latin"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_latin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/bismillaha_hirrohman_nirrohin"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/terjemahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/terjemahan"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_terjemahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:layout_marginBottom="15dp"
                android:text="@string/dengan_menyebut_nama_allah_yang_maha_pemurah_lagi_maha_penyayang"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>